[tool.poetry]
name = "statquest"
version = "0.1.0"
description = "StatQuest Python Learning Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "statquest", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12.1"
numpy = "^2.0.0"
pandas = "^2.0.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
torch = "^2.7.1"
jupyter = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.12.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
